[package]
name = "tracing-oslog"
description = "A layer for tracing that outputs to the oslog on macOS/iOS"
authors = ["Lucy <lucy@absolucy.moe>"]
version = "0.2.0"
edition = "2021"
license = "Zlib"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "os::macos-apis",
]
keywords = ["tracing", "oslog", "os_log", "macos", "ios"]
repository = "https://github.com/Absolucy/tracing-oslog"
documentation = "https://docs.rs/tracing-oslog"
# Keep up to date with version in ./create_bindings.sh
rust-version = "1.77"

[dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "registry"] }
cfg-if = "1.0"
once_cell = "1.8"
parking_lot = "0.12"
tracing-core = "0.1"

[build-dependencies]
cc = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin"]
