[package]
name = "tracing-oslog"
description = "A layer for tracing that outputs to the oslog on macOS/iOS"
authors = ["Lucy <lucy@absolucy.moe>"]
version = "0.1.2"
edition = "2018"
license = "Zlib"
categories = ["development-tools::debugging", "development-tools::profiling", "os::macos-apis"]
keywords = ["tracing", "oslog", "os_log", "macos", "ios"]
repository = "https://github.com/Absolucy/tracing-oslog"

[dependencies]
cfg-if = "1.0"
fnv = "1.0"
once_cell = "1.8"
parking_lot = "0.12"
tracing-core = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
# Using this version where this issue has already being fixed: https://github.com/rust-lang/rust-bindgen/issues/3181
# version 'sim' in target triple 'aarch64-apple-ios-sim' is invalid
# TODO: return to use a specific version once a new release with the fix is available
bindgen = { git = "https://github.com/rust-lang/rust-bindgen", rev = "97ab9152b5edb1fda1ced9bc1604f5e4dc9cfaa9" }
cc = "1.0"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
targets = []
